2012-01-08:
 * oprava skriptu videobb a videozer
2011-12-07:
 * oprava skriptu videobb a videozer
2011-09-29:
 * pridana polozka "Serialy"
2011-09-13:
 * oprava pluginu vk.com - nefungoval spravne ve Windows prostredi, problem s cookies a home adresarem
2011-08-16:
 * oprava nazvu filmu u serialu
 * pridan popisek k filmu
2011-08-03:
 * opraveno strankovani, pridano vyhledavani, presunuti kodu videoserveru do common knihoven
2011-07-27:
 * FilmyCZ.com