@@ -1,3 +1,7 @@
+2012-05-27:
+ * pridani upoutavky z youtube.com
+ * pridani serveru 24video.net
+ * pridani hd rozliseni videa z vk.com
 2012-01-08:
  * oprava skriptu videobb a videozer
 2011-12-07:
